--- a/gundb/templates/todo.html
+++ b/gundb/templates/todo.html
@@ -7,7 +7,7 @@
     <form><input><button>Add</button></form>
 
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
       var host = "{{ config.HOST }}";
       var port = "{{ config.PORT }}";
