--- a/gundb/templates/todo.html
+++ b/gundb/templates/todo.html
@@ -7,7 +7,11 @@
     <form><input><button>Add</button></form>
 
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+   <script
+   src="http://code.jquery.com/jquery-3.5.1.min.js"
+   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+   crossorigin="anonymous"></script>
+
     <script>
       var host = "{{ config.HOST }}";
       var port = "{{ config.PORT }}";
